5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1667_2321.log
== SUBMITION (2019-04-16 17:05:57) 
-- CODE:
nomebruxo = input()

if (nomebruxo.lower() == 'harry'):
	print(9.654/1.3479)
else (nomebruxo.lower() == 'luna'):
	print(4.984/2.789)
-- EXECUTION TIME:
0.203783
-- ERROR:
  File "/home/codebench/codes/1667/2321/main.py", line 5
    else (nomebruxo.lower() == 'luna'):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:06:02) 
-- CODE:
nomebruxo = input()

if (nomebruxo.lower() == 'harry'):
	print(9.654/1.3479)
else (nomebruxo.lower() == 'luna'):
	print(4.984/2.789)
-- ERROR:
File "XXXX", line 5
    else (nomebruxo.lower() == 'luna'):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:06:54) 
-- CODE:
nomebruxo = input()
nomebruxo.lower()
if (nomebruxo == 'harry'):
	print(9.654/1.3479)
else (nomebruxo == 'luna'):
	print(4.984/2.789)
print (nomeBruxo)
-- ERROR:
File "XXXX", line 5
    else (nomebruxo == 'luna'):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:07:15) 
-- CODE:
nomebruxo = input()
nomebruxo.lower()
if (nomebruxo == 'harry'):
	print(9.654/1.3479)
else :
	print(4.984/2.789)
print (nomeBruxo)
-- EXECUTION TIME:
0.156876
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2321/main.py", line 7, in <module>
    print (nomeBruxo)
NameError: name 'nomeBruxo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:07:16) 
-- CODE:
nomebruxo = input()
nomebruxo.lower()
if (nomebruxo == 'harry'):
	print(9.654/1.3479)
else :
	print(4.984/2.789)
print (nomeBruxo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print (nomeBruxo)
NameError: name 'nomeBruxo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:07:38) 
-- CODE:
nomebruxo = input()
nomebruxo.lower()
if (nomebruxo == 'harry'):
	print(9.654/1.3479)
else :
	print(4.984/2.789)
print (nomebruxo)
-- OUTPUT:
1.7870204374327716
Luna
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:07:49) 
-- CODE:
nomebruxo = input()
nomebruxo.lower()
if (nomebruxo == 'harry'):
	print(9.654/1.3479)
else :
	print(4.984/2.789)
print (nomebruxo)
-- OUTPUT:
1.7870204374327716
Luna
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 17:08:18) 
-- CODE:
nomebruxo = input()
nomebruxo = nomebruxo.lower()
if (nomebruxo == 'harry'):
	print(9.654/1.3479)
else :
	print(4.984/2.789)
print (nomebruxo)
-- OUTPUT:
1.7870204374327716
luna
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 17:08:30) 
-- CODE:
nomebruxo = input()
nomebruxo = nomebruxo.lower()
if (nomebruxo == 'harry'):
	print(9.654/1.3479)
else :
	print(4.984/2.789)

-- EXECUTION TIME:
0.128058
-- TEST CASE 1:
---- input:
Luna
---- correct output:
1.7870204374327716
---- user output:
1.7870204374327716
-- TEST CASE 2:
---- input:
Harry
---- correct output:
7.1622523926107275
---- user output:
7.1622523926107275
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
